Change All  Structure

--- a/Our-Team.html
+++ b/Our-Team.html
@@ -18,47 +18,57 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-md   mb-5">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><img class="img-fluid" src="homepageimages/vmart_store-logo.png"
-            alt="" width="130px">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <i class="fa-solid fa-bars text-white"></i><span class="navbar-toggler-icon"></span>
+    <nav class="navbar navbar-expand-md">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">ONLINE SHOP</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+          aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav">
-            <a href=""><i class="fa-solid fa-bars fs-5"></i></a>
-          </ul>
-          <div class="d-flex ms-auto position-relative">
-            <div class="">
-              <input class="form-control" list="datalistOptions" placeholder="Search, Brand,Product....">
-            </div>
-            <div class="position-absolute top-0 end-0">
-              <a href="" class="btn "><i class="fa-solid fa-magnifying-glass dark"></i></a>
-            </div>
-          </div>
-
-          <ul class="navbar-nav nav-brand-icons m-auto">
-            <li class="login-btn px-2">
-              <a href=""><a href="" class="btn"><span><i class="fa-solid fa-user px-1"></i></span>Login</a>
+        <div class="collapse navbar-collapse" id="navbarScroll">
+          <ul class="navbar-nav mx-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Shop</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                Portfolio
               </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
             </li>
-
-            <li class="login-btn Track-Order px-1 px-3 position-relative">
-              <a href="" class="btn">Track Order</a>
-              <span 
-              class="position-absolute top-0 strat-0   translate-middle badge rounded-pill bg-danger">
-              <i class="fa-solid fa-truck"></i></span>
-            </li>
-            
-            <li class="login-btn Cart position-relative px-2">
-              <a href="" class="btn">Cart</a>
-              <span
-                class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">2+</i></span>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                Services
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
             </li>
           </ul>
+          <div class="navbar-right-btn">
+            <a href="javascript:void(0)" class="btn">Sign Up</a>
+            <a href="javascript:void(0)" class="btn">Login</a>
+          </div>
         </div>
       </div>
     </nav>
@@ -74,7 +84,7 @@
   <style>
     .top-fixed-section {
       color: white;
-      background: url(homepageimages/Group\ 48095504\ footer-bg.svg);
+      background-color:rgba(0, 0, 0, 0.718);
       padding: 20px 0px 20px;
       background-repeat: no-repeat;
       background-size: cover;
@@ -83,19 +93,12 @@
 
     .top-fixed-section h1 {
       color: white;
-      letter-spacing: 2px;
+      font-family: "Poppins", sans-serif;
       font-weight: 600;
     }
 
     .breadcrumb-text-center {
       justify-content: center !important;
-    }
-
-    .breadcrumb-text-center a {
-      font-size: 18px;
-      color: aqua;
-      letter-spacing: 1px;
-
     }
   </style>
 
@@ -111,12 +114,6 @@
         <div class="container-fluid p-0 mt-5">
           <div class="top-fixed-section text-center">
             <h1>OUR TEAM</h1>
-            <nav aria-label="breadcrumb">
-              <ol class="breadcrumb  breadcrumb-text-center">
-                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                <li class="breadcrumb-item "><a href="">Library</a></li>
-              </ol>
-            </nav>
           </div>
         </div>
       </section>
@@ -132,7 +129,7 @@
               websites.
             </p>
             <div class="hire-team-btn">
-              <a href="" class="btn">HIRE OUR TEAM</a>
+              <a href="javascript:void(0)" class="btn">HIRE OUR TEAM</a>
             </div>
           </div>
 
@@ -143,7 +140,7 @@
                 <div class="card-body text-center">
                   <h4>Vanessa laird</h4>
                   <h6>CEO</h6>
-                  <a href=""><span><i class="fa-brands fa-twitter"></i></span>@vanessalaird</a>
+                  <a href="javascript:void(0)"><span><i class="fa-brands fa-twitter"></i></span>@vanessalaird</a>
                 </div>
               </div>
             </div>
@@ -153,7 +150,7 @@
                 <div class="card-body text-center">
                   <h4>Irea Evans</h4>
                   <h6>DIRECTOR</h6>
-                  <a class="text-danger" href=""><span><i
+                  <a class="text-danger" href="javascript:void(0)"><span><i
                         class="fa-brands fa-google-plus-g mx-1"></i></i></span>ireaevans</a>
                 </div>
               </div>
@@ -164,7 +161,7 @@
                 <div class="card-body text-center">
                   <h4>Mason Campbell</h4>
                   <h6>MANAGER</h6>
-                  <a href="" class="text-info">
+                  <a href="javascript:void(0)" class="text-info">
                     <span><i class="fa-brands fa-facebook mx-1"></i></i></span>masoncampbell</a>
                 </div>
               </div>
@@ -175,7 +172,7 @@
                 <div class="card-body text-center">
                   <h4>Natasha Malkova</h4>
                   <h6>FRONT END CODER</h6>
-                  <a class="text-info" href=""><span><i
+                  <a class="text-info" href="javascript:void(0)"><span><i
                         class="fa-brands fa-github mx-1"></i></i></span>natashamalkova</a>
                 </div>
               </div>
@@ -186,7 +183,7 @@
                 <div class="card-body text-center">
                   <h4>Eva Mendes</h4>
                   <h6>BACK END GENIE</h6>
-                  <a href="" class="text-warning"><span><i class="fa-brands fa-instagram mx-1"></i></span>evamendes</a>
+                  <a href="javascript:void(0)" class="text-warning"><span><i class="fa-brands fa-instagram mx-1"></i></span>evamendes</a>
                 </div>
               </div>
             </div>
@@ -196,7 +193,7 @@
                 <div class="card-body text-center">
                   <h4>Olivia Taylor</h4>
                   <h6>HAPPINESS ENGINEER</h6>
-                  <a class="text-primary" href=""><span><i
+                  <a class="text-primary" href="javascript:void(0)"><span><i
                         class="fa-brands fa-linkedin mx-1"></i></span>oliviataylor</a>
                 </div>
               </div>
@@ -224,10 +221,10 @@
               laboriosam ducimus praesentium nisi.
             </p>
             <div class="left-socials-icons text-center">
-              <a href=""><i class="fa-brands fa-facebook-f"></i></a>
-              <a href=""><i class="fa-brands fa-twitter"></i></a>
-              <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
-              <a href=""><i class="fa-solid fa-p"></i></a>
+              <a href="javascript:void(0)"><i class="fa-brands fa-facebook-f"></i></a>
+              <a href="javascript:void(0)"><i class="fa-brands fa-twitter"></i></a>
+              <a href="javascript:void(0)"><i class="fa-brands fa-linkedin-in"></i></a>
+              <a href="javascript:void(0)"><i class="fa-solid fa-p"></i></a>
             </div>
           </div>
         </div>
@@ -241,7 +238,7 @@
                   <a class="nav-link active" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="">ABOUT US</a>
+                  <a class="nav-link active" href="javascript:void(0)">ABOUT US</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" href="profile.html">Profile</a>
@@ -282,7 +279,7 @@
           <h6>SOME POSTS</h6>
           <div class="footer-post-sec">
             <div>
-              <a href=""><img class="img-fluid" src="homepageimages/b5.jpg" alt="">
+              <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b5.jpg" alt="">
               </a>
             </div>
             <div class="ms-2">
@@ -293,7 +290,7 @@
 
           <div class="footer-post-sec">
             <div>
-              <a href=""><img class="img-fluid" src="homepageimages/b1.png" alt="">
+              <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b1.png" alt="">
               </a>
             </div>
             <div class="ms-2">
@@ -307,26 +304,26 @@
         <div class="col-lg-3 col-md-6 col-sm-6 col-12 ">
           <h6>POPULAR TAGS</h6>
           <div class="footer-column-links-tags">
-            <a href="">HEADPHONESS</a>
-            <a href="">ACCESSORIES</a>
-            <a href="">NEW</a>
-            <a href="">WIRELESS</a>
-            <a href="">CABLES</a>
-            <a href="">DEVICES</a>
-            <a href="">GADGETS</a>
-            <a href=""> BRANDS</a>
-            <a href="">CASES</a>
-            <a href=""> CABLES</a>
-            <a href=""> CABLES</a>
+            <a href="javascript:void(0)">HEADPHONESS</a>
+            <a href="javascript:void(0)">ACCESSORIES</a>
+            <a href="javascript:void(0)">NEW</a>
+            <a href="javascript:void(0)">WIRELESS</a>
+            <a href="javascript:void(0)">CABLES</a>
+            <a href="javascript:void(0)">DEVICES</a>
+            <a href="javascript:void(0)">GADGETS</a>
+            <a href="javascript:void(0)"> BRANDS</a>
+            <a href="javascript:void(0)">CASES</a>
+            <a href="javascript:void(0)"> CABLES</a>
+            <a href="javascript:void(0)"> CABLES</a>
           </div>
 
           <div class="footer-contact-details-body pt-2 ">
             <ul class="footer-social-nav d-flex">
-              <li><a href="" class="btn btn-youtube text-white"><span><i
+              <li><a href="javascript:void(0)" class="btn btn-youtube text-white"><span><i
                       class="fa-brands fa-youtube mx-1"></i></span>YouTube</a>
               </li>
               <li>
-                <a href="" class="btn btn-telegram text-white"><span><i
+                <a href="javascript:void(0)" class="btn btn-telegram text-white"><span><i
                       class="fa-brands fa-telegram mx-1"></i></span>Telegram</a>
               </li>
             </ul>
@@ -381,13 +378,13 @@
       <div class="row text-center">
         <div class="col-lg-4 col-md-6 my-2 col-12">
           <p>
-            © 2015 All rights reserved. Development by <a class="agency-copy" href="">Vijayyadav</a>
+            © 2015 All rights reserved. Development by <a class="agency-copy" href="javascript:void(0)">Vijayyadav</a>
           </p>
         </div>
         <div class="col-lg-4 mb-2 col-md-6 col-12">
           <div class="footer-social-icons">
-            <a href="" class=" text-decoration-none">Privacy Policy</a> <span class="text-white">|</span>
-            <a href="" class=" text-decoration-none">Terms And Condition</a>
+            <a href="javascript:void(0)" class=" text-decoration-none">Privacy Policy</a> <span class="text-white">|</span>
+            <a href="javascript:void(0)" class=" text-decoration-none">Terms And Condition</a>
           </div>
         </div>
         <div class="col-lg-4 co-12">
