--- a/categories.html
+++ b/categories.html
@@ -9,14 +9,8 @@
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/owl.carousel.css">
-  <link rel="stylesheet" href="css/owl.theme.green.css">
   <link rel="stylesheet" href="css/categories.css">
-  <link rel="stylesheet" href="css/animate.css">
-  <script src="js/jquery.min.js">
-  </script>
-  <script src="js/owl.carousel.min.js">
-  </script>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -24,46 +18,56 @@
   <!-- navigation -->
   <header>
     <nav class="navbar navbar-expand-md">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><img class="img-fluid" src="homepageimages/vmart_store-logo.png"
-            alt="" width="130px">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <i class="fa-solid fa-bars text-white"></i><span class="navbar-toggler-icon"></span>
+      <div class="container">
+        <a class="navbar-brand" href="index.html">ONLINE SHOP</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+          aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav">
-            <a href=""><i class="fa-solid fa-bars fs-5"></i></a>
-          </ul>
-          <div class="d-flex ms-auto position-relative">
-            <div class="">
-              <input class="form-control" list="datalistOptions" placeholder="Search, Brand,Product....">
-            </div>
-            <div class="position-absolute top-0 end-0">
-              <a href="" class="btn "><i class="fa-solid fa-magnifying-glass dark"></i></a>
-            </div>
-          </div>
-
-          <ul class="navbar-nav nav-brand-icons m-auto">
-            <li class="login-btn px-2">
-              <a href=""><a href="" class="btn"><span><i class="fa-solid fa-user px-1"></i></span>Login</a>
+        <div class="collapse navbar-collapse" id="navbarScroll">
+          <ul class="navbar-nav mx-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="javascript:void(0)">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="javascript:void(0)">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="javascript:void(0)">Shop</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="navbarScrollingDropdown" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                Portfolio
               </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                <li><a class="dropdown-item" href="javascript:void(0)">Action</a></li>
+                <li><a class="dropdown-item" href="javascript:void(0)">Another action</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="javascript:void(0)">Something else here</a></li>
+              </ul>
             </li>
-
-            <li class="login-btn Track-Order px-1 px-3 position-relative">
-              <a href="" class="btn">Track Order</a>
-              <span 
-              class="position-absolute top-0 strat-0   translate-middle badge rounded-pill bg-danger">
-              <i class="fa-solid fa-truck"></i></span>
-            </li>
-            
-            <li class="login-btn Cart position-relative px-2">
-              <a href="" class="btn">Cart</a>
-              <span
-                class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">2+</i></span>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="navbarScrollingDropdown" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                Services
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                <li><a class="dropdown-item" href="javascript:void(0)">Action</a></li>
+                <li><a class="dropdown-item" href="javascript:void(0)">Another action</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="javascript:void(0)">Something else here</a></li>
+              </ul>
             </li>
           </ul>
+          <div class="navbar-right-btn">
+            <a href="javascript:void(0)" class="btn">Sign Up</a>
+            <a href="javascript:void(0)" class="btn">Login</a>
+          </div>
         </div>
       </div>
     </nav>
@@ -76,7 +80,7 @@
     <style>
       .top-fixed-section {
         color: white;
-        background: url(homepageimages/Group\ 48095504\ footer-bg.svg);
+        background-color:rgba(0, 0, 0, 0.718);
         padding: 20px 0px 20px;
         background-repeat: no-repeat;
         background-size: cover;
@@ -85,7 +89,7 @@
   
       .top-fixed-section h1 {
         color: white;
-        letter-spacing: 2px;
+        font-family: "Poppins", sans-serif;
         font-weight: 600;
       }
   
@@ -93,12 +97,7 @@
         justify-content: center !important;
       }
   
-      .breadcrumb-text-center a {
-        font-size: 18px;
-        color: aqua;
-        letter-spacing: 1px;
-  
-      }
+
     </style>
 
 
@@ -109,117 +108,113 @@
         <div class="container-fluid p-0 ">
             <div class="top-fixed-section text-center">
                 <h1>Categories</h1>
-                <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb  breadcrumb-text-center">
-                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    </ol>
-                </nav>
+             
             </div>
         </div>
     </section>
 
       <div class="container categeory-main-wrapper mt-4">
         <div class="row">
-          <div class="col-lg-6 col-sm-6">
+          <div class="col-md-6">
             <div class="categories-bg-img mb-3">
               <div class="categories-bg-img-body">
                 <h4 class="mb-2 fw-bold">Men T-shirt</h4>
                 <span>150 items</span>
                 <div class="mt-3">
-                  <a href="" class="btn">Shop Now</a>
+                  <a href="javascript:void(0)" class="btn">Shop Now</a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-6 col-sm-6">
+          <div class="col-md-6">
             <div class="categories-bg-img-jacket mb-3">
               <div class="categories-bg-img-body">
                 <h4 class="mb-2 fw-bold">Jackets</h4>
                 <span>350 items</span>
                 <div class="mt-3">
-                  <a href="" class="btn">Shop Now</a>
+                  <a href="javascript:void(0)" class="btn">Shop Now</a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-6 col-sm-6">
+          <div class="col-md-6">
             <div class="categories-bg-img-shoes mb-3">
               <div class="categories-bg-img-body">
                 <h4 class="mb-2 fw-bold">Sunglasses</h4>
                 <span>250 items</span>
                 <div class="mt-3">
-                  <a href="" class="btn">Shop Now</a>
+                  <a href="javascript:void(0)" class="btn">Shop Now</a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-6 col-sm-6">
+          <div class="col-md-6">
             <div class="categories-bg-img-Sunglasses mb-3">
               <div class="categories-bg-img-body">
                 <h4 class="mb-2 fw-bold">Cargos</h4>
                 <span>200 items</span>
                 <div class="mt-3">
-                  <a href="" class="btn">Shop Now</a>
+                  <a href="javascript:void(0)" class="btn">Shop Now</a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-6 col-sm-6">
+          <div class="col-md-6">
             <div class="categories-bg-img-winter mb-3">
               <div class="categories-bg-img-body">
                 <h4 class="mb-2 fw-bold">Shoes</h4>
                 <span>250 items</span>
                 <div class="mt-3">
-                  <a href="" class="btn">Shop Now</a>
+                  <a href="javascript:void(0)" class="btn">Shop Now</a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-lg-6 col-sm-6">
+          <div class="col-md-6">
             <div class="categories-bg-img-item-1 mb-3">
               <div class="categories-bg-img-body">
                 <h4 class="mb-2 fw-bold">Winter</h4>
                 <span>250 items</span>
                 <div class="mt-3">
-                  <a href="" class="btn">Shop Now</a>
+                  <a href="javascript:void(0)" class="btn">Shop Now</a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-6 col-sm-6">
+          <div class="col-md-6">
             <div class="categories-bg-img-item-2 mb-3">
               <div class="categories-bg-img-body">
                 <h4 class="mb-2 fw-bold">Casual Trousers</h4>
                 <span>250 items</span>
                 <div class="mt-3">
-                  <a href="" class="btn">Shop Now</a>
+                  <a href="javascript:void(0)" class="btn">Shop Now</a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-lg-6 col-sm-6">
+          <div class="col-md-6">
             <div class="categories-bg-img-item-3 mb-3">
               <div class="categories-bg-img-body">
                 <h4 class="mb-2 fw-bold">Shoes</h4>
                 <span>250 items</span>
                 <div class="mt-3">
-                  <a href="" class="btn">Shop Now</a>
+                  <a href="javascript:void(0)" class="btn">Shop Now</a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-lg-6 col-sm-6">
+          <div class="col-md-6">
             <div class="categories-bg-img-item-4 mb-3">
               <div class="categories-bg-img-body">
                 <h4 class="mb-2 fw-bold">Sweatshirts</h4>
                 <span>250 items</span>
                 <div class="mt-3">
-                  <a href="" class="btn">Shop Now</a>
+                  <a href="javascript:void(0)" class="btn">Shop Now</a>
                 </div>
               </div>
             </div>
@@ -247,10 +242,10 @@
               laboriosam ducimus praesentium nisi.
             </p>
             <div class="left-socials-icons text-center">
-              <a href=""><i class="fa-brands fa-facebook-f"></i></a>
-              <a href=""><i class="fa-brands fa-twitter"></i></a>
-              <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
-              <a href=""><i class="fa-solid fa-p"></i></a>
+              <a href="javascript:void(0)"><i class="fa-brands fa-facebook-f"></i></a>
+              <a href="javascript:void(0)"><i class="fa-brands fa-twitter"></i></a>
+              <a href="javascript:void(0)"><i class="fa-brands fa-linkedin-in"></i></a>
+              <a href="javascript:void(0)"><i class="fa-solid fa-p"></i></a>
             </div>
           </div>
         </div>
@@ -261,7 +256,7 @@
             <div class="col-lg-6 col-6 footer-column-links">
               <ul class="nav flex-column">
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">Home</a>
+                  <a class="nav-link active" href="javascript:void(0)">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" href="">ABOUT US</a>
@@ -283,16 +278,16 @@
             <div class="col-lg-6 col-6 footer-column-links">
               <ul class="nav flex-column">
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">LOGIN</a>
+                  <a class="nav-link active" href="javascript:void(0)">LOGIN</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" href="Registration.html">REGISTRATION</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">SERVICES</a>
+                  <a class="nav-link active" href="javascript:void(0)">SERVICES</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">PAGES</a>
+                  <a class="nav-link active" href="javascript:void(0)">PAGES</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" href="Our-Team.html">OUR TEAM</a>
@@ -305,7 +300,7 @@
           <h6>SOME POSTS</h6>
           <div class="footer-post-sec">
             <div>
-              <a href=""><img class="img-fluid" src="homepageimages/b5.jpg" alt="">
+              <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b5.jpg" alt="">
               </a>
             </div>
             <div class="ms-2">
@@ -316,7 +311,7 @@
 
           <div class="footer-post-sec">
             <div>
-              <a href=""><img class="img-fluid" src="homepageimages/b1.png" alt="">
+              <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b1.png" alt="">
               </a>
             </div>
             <div class="ms-2">
@@ -330,26 +325,26 @@
         <div class="col-lg-3 col-md-6 col-sm-6 col-12 ">
           <h6>POPULAR TAGS</h6>
           <div class="footer-column-links-tags">
-            <a href="">HEADPHONESS</a>
-            <a href="">ACCESSORIES</a>
-            <a href="">NEW</a>
-            <a href="">WIRELESS</a>
-            <a href="">CABLES</a>
-            <a href="">DEVICES</a>
-            <a href="">GADGETS</a>
-            <a href=""> BRANDS</a>
-            <a href="">CASES</a>
-            <a href=""> CABLES</a>
-            <a href=""> SHIRT</a>
+            <a href="javascript:void(0)">HEADPHONESS</a>
+            <a href="javascript:void(0)">ACCESSORIES</a>
+            <a href="javascript:void(0)">NEW</a>
+            <a href="javascript:void(0)">WIRELESS</a>
+            <a href="javascript:void(0)">CABLES</a>
+            <a href="javascript:void(0)">DEVICES</a>
+            <a href="javascript:void(0)">GADGETS</a>
+            <a href="javascript:void(0)"> BRANDS</a>
+            <a href="javascript:void(0)">CASES</a>
+            <a href="javascript:void(0)"> CABLES</a>
+            <a href="javascript:void(0)"> SHIRT</a>
           </div>
 
           <div class="footer-contact-details-body pt-2 ">
             <ul class="footer-social-nav d-flex">
-              <li><a href="" class="btn btn-youtube text-white"><span><i
+              <li><a href="javascript:void(0)" class="btn btn-youtube text-white"><span><i
                       class="fa-brands fa-youtube mx-1"></i></span>YouTube</a>
               </li>
               <li>
-                <a href="" class="btn btn-telegram text-white"><span><i
+                <a href="javascript:void(0)" class="btn btn-telegram text-white"><span><i
                       class="fa-brands fa-telegram mx-1"></i></span>Telegram</a>
               </li>
             </ul>
@@ -404,13 +399,13 @@
       <div class="row text-center">
         <div class="col-lg-4 col-md-6 my-2 col-12">
           <p>
-            © 2024 All rights reserved. Development by <a class="agency-copy" href="">Vijay.Yadav</a>
+            © 2024 All rights reserved. Development by <a class="agency-copy" href="javascript:void(0)">Vijay.Yadav</a>
           </p>
         </div>
         <div class="col-lg-4 mb-2 col-md-6 col-12">
           <div class="footer-social-icons">
-            <a href="" class=" text-decoration-none">Privacy Policy</a> <span class="text-white">|</span>
-            <a href="" class=" text-decoration-none">Terms And Condition</a>
+            <a href="javascript:void(0)" class=" text-decoration-none">Privacy Policy</a> <span class="text-white">|</span>
+            <a href="javascript:void(0)" class=" text-decoration-none">Terms And Condition</a>
           </div>
         </div>
         <div class="col-lg-4 co-12">
