--- a/blog.html
+++ b/blog.html
@@ -141,8 +141,8 @@
                                     eveniet ullam placeat voluptatem, error enim?
                                 </p>
                             </div>
-                            <div class="card mb-4 p-5 card-bottom-bg-blue">
-                                <h5 class="mb-4">Words can be like X-rays, if you use them properly—they’ll go through
+                            <div class="card mb-4 p-3 p-md-5 card-bottom-bg-blue">
+                                <h5 class="mb-2 md-mb-4">Words can be like X-rays, if you use them properly—they’ll go through
                                     anything. You
                                     read and you’re pierced.</h5>
                                 <h6> —Aldous Huxley</h6>
@@ -368,7 +368,7 @@
     <footer class="footer-section">
         <div class="container">
             <div class="row footer-top">
-                <div class="col-lg-3 col-md-6 mb-4">
+                <div class="col-lg-3 col-md-8 mb-5">
                     <div class="footer-left-sec">
                         <img class="img-fluid d-block m-auto mb-3" src="homepageimages/vmart_store-logo.png" alt=""
                             width="160px" height="200px">
@@ -386,47 +386,47 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6 col-12">
+                <div class="col-lg-3 col-md-4 mb-5 lg-mb-0 col-12">
                     <h6>QUECK LINKS</h6>
                     <div class="row">
                         <div class="col-lg-6 col-6 footer-column-links">
                             <ul class="nav flex-column">
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="index.html">Home</a>
+                                    <a class="nav-link " href="javascript:void(0)">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="javascript:void(0)">ABOUT US</a>
+                                    <a class="nav-link" href="">ABOUT US</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="profile.html">Profile</a>
+                                    <a class="nav-link " href="profile.html">Profile</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="blog.html">BLOGS</a>
+                                    <a class="nav-link " href="blog.html">BLOGS</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="categories.html">Category</a>
+                                    <a class="nav-link " href="categories.html">Category</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="contact-us.html">CONTACT</a>
+                                    <a class="nav-link" href="javascript:void(0)">CONTACT</a>
                                 </li>
                             </ul>
                         </div>
                         <div class="col-lg-6 col-6 footer-column-links">
                             <ul class="nav flex-column">
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="javascript:void(0)">LOGIN</a>
+                                    <a class="nav-link" href="javascript:void(0)">LOGIN</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="Registration.html">REGISTRATION</a>
+                                    <a class="nav-link" href="Registration.html">REGISTRATION</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="javascript:void(0)">SERVICES</a>
+                                    <a class="nav-link" href="javascript:void(0)">SERVICES</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="javascript:void(0)">PAGES</a>
+                                    <a class="nav-link" href="javascript:void(0)">PAGES</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="Our-Team.html">OUR TEAM</a>
+                                    <a class="nav-link" href="Our-Team.html">OUR TEAM</a>
                                 </li>
                             </ul>
                         </div>
@@ -458,7 +458,7 @@
 
                 </div>
 
-                <div class="col-lg-3 col-md-6 col-sm-6 col-12 ">
+                <div class="col-lg-3 col-md-6  col-12 ">
                     <h6>POPULAR TAGS</h6>
                     <div class="footer-column-links-tags">
                         <a href="javascript:void(0)">HEADPHONESS</a>
@@ -492,35 +492,35 @@
         <div class="container-fluid p-0">
             <div class="footer-delevery-process text-white text-center">
                 <div class="row justify-content-center">
-                    <div class="col-lg-2 col-6">
+                    <div class="col-lg-2 col-md-6 col-10 mb-3 md-mb-0">
                         <i class="fa-solid fa-thumbs-up"></i>
                         <h6>High Quality</h6>
                         <p>
                             Nullam sed sollicitudin mauris velit id venenatis morbi
                         </p>
                     </div>
-                    <div class="col-lg-2 col-10">
+                    <div class="col-lg-2 col-md-6 col-10 mb-3 md-mb-0">
                         <i class="fa-solid fa-phone-volume"></i>
                         <h6>Awesome Support</h6>
                         <p>
                             Nullam sed sollicitudin mauris velit id venenatis morbi </p>
                     </div>
 
-                    <div class="col-lg-2 col-6">
+                    <div class="col-lg-2 col-md-6 col-10 mb-3 md-mb-0">
                         <i class="fa-solid fa-truck"></i>
                         <h6>Really Fast Delivery</h6>
                         <p>
                             Nullam sed sollicitudin mauris velit id venenatis morbi
                         </p>
                     </div>
-                    <div class="col-lg-2 col-10">
+                    <div class="col-lg-2 col-md-6 col-10 mb-3 md-mb-0">
                         <i class="fa-solid fa-right-left"></i>
                         <h6>14-Day Returns</h6>
                         <p>
                             Nullam sed sollicitudin mauris velit id venenatis morbi
                         </p>
                     </div>
-                    <div class="col-lg-2 col-6">
+                    <div class="col-lg-2 col-10">
                         <i class="fa-solid fa-lock"></i>
                         <h6>Secure Checkout</h6>
                         <p>
@@ -530,7 +530,6 @@
                 </div>
             </div>
         </div>
-
         <div class="copyright-section pt-3">
             <div class="row text-center">
                 <div class="col-lg-4 col-md-6 my-2 col-12">
@@ -541,9 +540,9 @@
                 </div>
                 <div class="col-lg-4 mb-2 col-md-6 col-12">
                     <div class="footer-social-icons">
-                        <a href="privacy-policy.html" class=" text-decoration-none">Privacy Policy</a> <span
+                        <a href="javascript:void(0)" class=" text-decoration-none">Privacy Policy</a> <span
                             class="text-white">|</span>
-                        <a href="Terms-And-Condition.html" class=" text-decoration-none">Terms And Condition</a>
+                        <a href="javascript:void(0)" class=" text-decoration-none">Terms And Condition</a>
                     </div>
                 </div>
                 <div class="col-lg-4 co-12">
@@ -553,13 +552,6 @@
                 </div>
             </div>
         </div>
-        <div class="window-top-bottom-scroll">
-            <button class=" btn" onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-        </div>
-
-
-
-
     </footer>
 
 
